<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.login.NewMusicianActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/loginLogo"
            android:layout_height="@dimen/loginLogo"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo"
            />

        <EditText
            android:id="@+id/longitudeTextbox"
            android:layout_width="@dimen/textBoxWidth"
            android:layout_height="@dimen/textBoxHeight"
            android:background="@drawable/textbox"
            android:hint="@string/longitude"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/textBoxPadding"
            android:paddingEnd="@dimen/textBoxPadding"
            android:fontFamily="@font/barlow_light"
            android:textColor="@color/black"
            android:textSize="@dimen/textBoxText"
            android:layout_margin="@dimen/textBoxMargin"
            />

        <EditText
            android:id="@+id/latitudeTextbox"
            android:layout_width="@dimen/textBoxWidth"
            android:layout_height="@dimen/textBoxHeight"
            android:background="@drawable/textbox"
            android:hint="@string/latitude"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/textBoxPadding"
            android:paddingEnd="@dimen/textBoxPadding"
            android:fontFamily="@font/barlow_light"
            android:textColor="@color/black"
            android:textSize="@dimen/textBoxText"
            android:layout_margin="@dimen/textBoxMargin"
            />

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="@dimen/calendarViewWidth"
            android:layout_height="@dimen/calendarLayoutHeight" />

        <Button
            android:id="@+id/createButton"
            android:background="@drawable/button"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginTop="@dimen/textBoxMargin"
            android:text="@string/create"
            android:fontFamily="@font/barlow_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            />

        <TextView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/underlinedButtonText"
            android:layout_marginTop="@dimen/textBoxMargin"
            android:fontFamily="@font/barlow_light"
            android:textColor="@color/black"
            android:text="@string/back"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>