<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/loginLogo"
            android:layout_height="@dimen/loginLogo"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo"/>

        <EditText
            android:id="@+id/usernameTextbox"
            android:layout_width="@dimen/textBoxWidth"
            android:layout_height="@dimen/textBoxHeight"
            android:background="@drawable/textbox"
            android:hint="@string/username"
            android:paddingStart="@dimen/textBoxPadding"
            android:paddingEnd="@dimen/textBoxPadding"
            android:fontFamily="@font/barlow_light"
            android:textColor="@color/black"
            android:textSize="@dimen/textBoxText"
            android:layout_margin="@dimen/textBoxMargin"
            />

        <EditText
            android:id="@+id/passwordTextbox"
            android:layout_width="@dimen/textBoxWidth"
            android:layout_height="@dimen/textBoxHeight"
            android:background="@drawable/textbox"
            android:hint="@string/password"
            android:paddingStart="@dimen/textBoxPadding"
            android:paddingEnd="@dimen/textBoxPadding"
            android:fontFamily="@font/barlow_light"
            android:textColor="@color/black"
            android:textSize="@dimen/textBoxText"
            android:layout_margin="@dimen/textBoxMargin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_light"
            android:textColor="@color/black"
            android:text="@string/forgot_password"
            />

        <Button
            android:id="@+id/loginButton"
            android:background="@drawable/button"
            android:layout_width="@dimen/loginButtonWidth"
            android:layout_height="@dimen/loginButtonHeight"
            android:text="@string/login"
            android:fontFamily="@font/barlow_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>